# mySFML_trash

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Config.cfg  ConstFoldersFlow.h  Core.cpp  Core.h  Makefile  README.md  c++.code-profile  cmake_install.cmake  file  gameconfig.cfg  header.h  license  main.app  main.cpp  myAppleUnit  result.txt  toolchain.cmake  чтово.txt
.github/workflow/: macos-build.yml
.github/workflows/: README.md  chech-version.yml  cheсk-version.yml  cmake-single-platform.yml  cop.yaml  macos-build.yml  update-wiki-dates.yml
Content/: rotationCircle.cpp  rotationCircle.hpp
Content/Map/: TileMap.cpp  TileMap.hpp  TreeList.h  block.cpp  block.hpp  genTree.cpp  genTree.hpp  texture list.h
Content/Sprites/: asd.vectornator
GUI/: GUISYS.cpp  GUISYS.hpp  tabMenu.cpp  tabMenu.hpp
MyApplication/: Config.cfg  ConfigurationProgram.h  Core.cpp  Core.h  DataLoader.hpp  cmakever.h  cmakever.h.in  gameconfig.cfg  header.h  main.cpp  myConst.h
MyApplication/Content/: ceph.vectornator  rotationCircle.cpp  rotationCircle.hpp
MyApplication/Content/ItemsStuff/: Coins.cpp  Coins.hpp  Coins.inl  Inventory.cpp  Inventory.hpp  Item.cpp  Item.hpp
MyApplication/Content/Map/: TileMap.cpp  TileMap.hpp  block.cpp  block.hpp  texture list.h
MyApplication/GUI/: GUISYS.cpp  GUISYS.hpp  gamegui.hpp  tabMenu.cpp
MyApplication/GUI/components/: button.cpp  button.hpp  dropDownList.cpp  minimap.cpp  minimap.hpp  progressBar.cpp  progressBar.hpp  selector.cpp  selector.hpp  staticSelector.cpp  staticSelector.hpp  textureSelector.cpp
MyApplication/entitys/: entity.cpp  entity.hpp  player.cpp  player.hpp
MyApplication/entitys/AI/: AIComponent.hpp  AIFollow.cpp  AIFollow.hpp  AIOption.hpp
MyApplication/entitys/Enemys/: slime.cpp  slime.hpp  test.hpp
MyApplication/entitys/properties/: attributes.cpp  attributes.hpp  movement.hpp
MyApplication/math/: CMakeLists.txt  LSystem.cpp  LSystem.hpp  ProcessGenerationNoice.cpp  ProcessGenerationNoice.hpp  TabletTree.cpp  TabletTree.hpp  mymath.cpp  mymath.hpp  noice.hpp
MyApplication/math/modNoices/: NoiceList.hpp  SimplexNoice.cpp  SimplexNoice.hpp
MyApplication/source/lib/: libsfml-audio.2.5.1.dylib  libsfml-audio.3.0.0.dylib  libsfml-graphics.3.0.0.dylib  libsfml-network.2.5.1.dylib  libsfml-network.3.0.0.dylib  libsfml-system.2.5.1.dylib  libsfml-system.3.0.0.dylib  libsfml-window.2.5.1.dylib  libsfml-window.3.0.0.dylib
MyApplication/source/mypars/: parsJSON.cpp  parsJSON.hpp
MyApplication/states/: ConstFoldersFlow.h  MainMenu.cpp  MainMenu.hpp  NoiceView.cpp  NoiceView.hpp  PauseMenu.cpp  PauseMenu.hpp  Process.cpp  Process.hpp  State.cpp  State.hpp  gfx.cpp  gfx.hpp  settings.cpp  settings.hpp
MyApplication_ARM64.app.dSYM/Contents/: Info.plist
Resourses/Textures/Sprites/: asd.vectornator
entitys/: entity.cpp  entity.hpp  player.cpp  player.hpp
entitys/AI/: AIComponent.cpp
entitys/Enemys/: test.cpp  test.hpp
entitys/properties/: hitbox.cpp  hitbox.hpp  movement.cpp  movement.hpp
lib/: libMath.dylib  libmLib.dylib
math/: MutationNoice.c  ProcessGenerationNoice.cpp  ProcessGenerationNoice.hpp  mymath.cpp  mymath.hpp  noice.hpp
metadata/: Info.plist  Info.plist.in  cmakever.h.in  ico.icns
source/: Core.cpp  Core.h  LOGGER.cpp  LOGGER.hpp  cmakever.h  header.h  main.cpp  myConst.h  staticFPSMetter.hpp  systemFunctionUNIX.cpp  systemFunctionUNIX.hpp
source/Content/: rotationCircle.cpp  rotationCircle.hpp
source/Content/ItemsStuff/: Coins.hpp  Coins.inl  Inventory.cpp  Inventory.hpp  Item.hpp  itemtextures.hpp
source/Content/Map/: TileMap.cpp  TileMap.hpp  block.cpp  block.hpp
source/GUI/: GUISYS.hpp  GUI_Component.cpp  GUI_Component.hpp
source/GUI/complex/: panel.cpp  panel.hpp  scrollbar.cpp  scrollbar.hpp  toolbar.cpp  toolbar.hpp
source/GUI/components/: button.cpp  button.hpp  checkbox.cpp  checkbox.hpp  dropDownList.cpp  dropDownList.hpp  inventoryGUI.cpp  inventoryGUI.hpp  minimap.cpp  minimap.hpp  progressBar.cpp  progressBar.hpp  selector.cpp  selector.hpp  slider.hpp  staticSelector.cpp  staticSelector.hpp  textbox.cpp  textbox.hpp  textureSelector.cpp  textureSelector.hpp
source/Nodes/: Node.cpp  Node.hpp  NodeConnection.hpp  NodePort.cpp  NodePort.hpp
source/core/: Core.cpp  Core.h  LOGGER.hpp  MemoryUsageMonitor.hpp  _myConst.h  _myFiles.h  header.h  keyboard.cpp  keyboard.hpp  main.cpp  staticFPSMetter.hpp  systemFunctionUNIX.hpp
source/core/dataCollector/: _man_Texture.hpp  _man_Volume.hpp
source/entitys/: entity.cpp  entity.hpp  entityEnum.hpp  player.cpp  player.hpp
source/entitys/AI/: AIAttack.cpp  AIAttack.hpp  AIComponent.cpp  AIComponent.hpp  AIFollow.cpp  AIFollow.hpp  AIOption.hpp  AISearchRing.hpp  AIWander.cpp  AIWander.hpp
source/entitys/Enemys/: slime.cpp  slime.hpp
source/entitys/properties/: attributes.cpp  attributes.hpp  hitbox.cpp  hitbox.hpp  movement.cpp  movement.hpp
source/lib/: libsfml-graphics.2.5.1.dylib
source/lib/pkgconfig/: sfml-window.pc
source/locTexts/: helperText.cpp  helperText.hpp
source/math/: CMakeLists.txt  LSystem.cpp  LSystem.hpp  ProcessGenerationNoice.cpp  ProcessGenerationNoice.hpp  mymath.cpp  mymath.hpp  pNoice.hpp  simplex.cpp  simplex.hpp
source/res/localisation/: ENG.json  RUS.json
source/res/shaders/: frr.frag
source/res/styles/: styles.json
source/source/mypars/: parsJSON.cpp  parsJSON.hpp  parsJSON_LOAD.cpp  parsJSON_SAVE.cpp
source/states/: DebugRoom.cpp  DebugRoom.hpp  EditorState.cpp  EditorState.hpp  MainMenu.cpp  MainMenu.hpp  NodeViewer.cpp  NodeViewer.hpp  NoiceView.cpp  NoiceView.hpp  PauseMenu.cpp  PauseMenu.hpp  Process.cpp  Process.hpp  State.cpp  State.hpp  VolumeManager.hpp  gfx.cpp  gfx.hpp  settings.cpp  settings.hpp
source/states/editModes/: NoiceViewer.cpp  NoiceViewer.hpp
source/stolen from/: ResourceHolder.hpp  ResourceIdentifiers.hpp
states/: MainMenu.cpp  MainMenu.hpp  NoiceView.cpp  NoiceView.hpp  PauseMenu.cpp  PauseMenu.hpp  Process.cpp  Process.hpp  State.cpp  State.hpp  gfx.cpp  gfx.hpp
(+28 files in other folders)
